# a01-passim-tafsir2json

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  main.py  pyproject.toml  remove_quran_quotes.sh  statsgen.sh  tafsir-metadata.csv
test_data/: invalid_format.txt  sc.1_2_3_4.txt  sc.28_5_10_15.txt  test_metadata.csv
tests/: test_main.py
